@@ -1,3 +1,6 @@
+2007-10-23
+	* Fixed bug 1818692, get srcId ViewItem when bidding on closed auction.
+
 2007-10-04
 	* 2.17.1 released.
 	* Fixed bug 1807254, unknown time interval "Refresh".
